Fixed Layout issue and null division error for ER

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,7 +28,7 @@ html, html a{
   -webkit-font-smoothing: antialiased;
 }
 
-.wrapper{
+.full-wrapper{
   margin: 0;
   padding: 0;
   height:auto;
